[package]
name = "serde_fancy_regex"
description = """
    A fork of serde_regex that (de)serializes fancy_regex as strings
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serde", "regex", "fancy_regex"]
categories = ["encoding"]
homepage = "https://github.com/ZJaume/serde-fancy-regex"
documentation = "https://docs.rs/serde_fancy_regex"
version = "2.0.0"
authors = ["jzaragoza@prompsit.com"]
edition = "2018"

[dependencies]
serde = "1.0.0"
fancy-regex = "0.11"

[dev-dependencies]
serde_derive = "1.0.0"
serde_json = "1.0.39"
